syntax = "proto3";
option java_package="com.zt.project.im.proto";
//option java_outer_classname="Student";
message BaseMessage{
    enum MsgType {
        COMMON_RESP = 0;
        LOGIN_REQ = 1;
        LOGIN_RESP = 2;
        HEARTBEAT_REQ = 3;
        HEARTBEAT_RESP = 4;
        TEXT_MESSAGE_REQ = 5;
        MESSAGE_RESP = 6;
    }

    MsgType msgType =2;
    bytes  bytesData = 3;
//    int32  checkSum = 5; // adler32 of nameLen, typeName and protobufData
}

message CommonResp{
    int32 code = 1;
    string desc = 2;
}


//type = 1
message LoginReq{
    int32 userId = 1;
}


//type=2
message LoginRes{
    int32 code = 1;
    string desc = 2;
}

//type=3
message HeartbeatReq{
    int32 userId = 1;
}

//type=4
message HeartbeatRes{
    int32 code = 1;
    string desc = 2;
}

//type=5
message TextMessageReq{
    string msgId = 1;
    int32 userId = 2;
    int32 reciverId = 3;
    string content = 4;
}

//type=6 消息发送响应
message MessageRes{
    int32 code = 1;
    string desc = 2;
    string messageId = 3;
}